tests/types/errors/function_closure_param_count_mismatch.expr
fn(i32) -> i32 bad = function(i32 x, i32 y) -> i32 {
  return x + y;
};
